Хз что делать с остальными требованиями на тесты так как поект либо не нуждается в них либо они просто не реализовываемы