@@ -4,16 +4,10 @@ import model.*;
 
 import java.util.List;
 
-import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.BeforeEach;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.junit.jupiter.api.Assertions.assertNotEquals;
-import static org.junit.jupiter.api.Assertions.assertNull;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-
+import static org.junit.jupiter.api.Assertions.*;
 
 
 class TaskManagerTest {
@@ -23,9 +17,28 @@ class TaskManagerTest {
     @BeforeEach
     void createTaskManager() {manager = new InMemoryTaskManager();}
 
-    @AfterEach
-    void deleteTaskManager() {manager.removeThis();}
+    @Test
+    void shouldReturnTrueIfCreateAllView() {
+        manager.createTask(new Task(Status.IN_PROGRESS, "Name1", "Description1"));
+        manager.createEpic(new Epic("Name1", "Description1"));
+        manager.createSubtask(new Subtask(Status.IN_PROGRESS, "Name", "description", manager.getEpicById(0)));
+        assertSame(manager.getTaskById(0).getClass(), Task.class);
+        assertSame(manager.getEpicById(0).getClass(), Epic.class);
+        assertSame(manager.getSubtaskById(0).getClass(), Subtask.class);
+        assertEquals(1, manager.getAllTasks().size());
+        assertNotNull(manager.getTaskById(0));
+        assertNotNull(manager.getEpicById(0));
+        assertNotNull(manager.getSubtaskById(0));
+    }
 
+    @Test
+    void checkCorrectWorkEpics() {
+        manager.createEpic(new Epic("Name1", "Description1"));
+        manager.createSubtask(new Subtask(Status.IN_PROGRESS, "Name", "description", manager.getEpicById(0)));
+
+        Subtask subtask = manager.getEpicById(0).getSubtasks().getFirst();
+        assertEquals(manager.getSubtaskById(0), subtask);
+    }
 
     @Test
     void addNewTask() {
@@ -41,7 +54,7 @@ class TaskManagerTest {
 
         assertNotNull(tasks, "Задачи не возвращаются.");
         assertEquals(1, tasks.size(), "Неверное количество задач.");
-        assertEquals(manager.getTaskById(0), tasks.get(0), "Задачи не совпадают.");
+        assertEquals(manager.getTaskById(0), tasks.getFirst(), "Задачи не совпадают.");
     }
 
     @Test
@@ -73,4 +86,5 @@ class TaskManagerTest {
         assertNotEquals(manager.getEpicById(0), manager.getEpicById(1)
                 , "Задачи с ID:1 и ID:2 эквивалентны !!!");
     }
+
 }
